--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div v-cloak></div>
       </div>
       <a href="https://github.com/tiktokusers/drkplayer" target="_blank" class="github-btn">
-        See on GitHub
+        GitHub DrkBot-Player
       </a>
     </div>
 
