--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://meyerweb.com/eric/tools/css/reset/reset.css"
     />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="alternate icon" class="js-site-favicon" type="image/png" href="https://github.githubassets.com/favicons/favicon.png">
     <title>Mini Player</title>
   </head>
   <body>
