--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
       <a href="https://github.com/tiktokusers/drkplayer" target="_blank" class="github-btn">
         GitHub DrkBot-Player
       </a>
+      <a href="javascript:ventanaSecundaria('https://wa.me/573046793853?text=/alive')">
+        BOT
+      </a>
     </div>
 
     <svg xmlns="http://www.w3.org/2000/svg" hidden xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -126,5 +129,10 @@
     </svg>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
     <script src="./scripts/script.js"></script>
+    <script> 
+       function ventanaSecundaria (URL){
+         window.open(URL,"popUp","width=120,height=300,scrollbars=NO")
+       }
+    </script>
   </body>
 </html>
