--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <a href="https://github.com/tiktokusers/drkplayer" target="_blank" class="github-btn">
         GitHub DrkBot-Player
       </a>
-      <a href="javascript:ventanaSecundaria('https://wa.me/573046793853?text=/alive')">
+      <a href="javascript:ventanaSecundaria('https://wa.me/573046793853?text=/alive')" class="btn">
         BOT
       </a>
     </div>
